--- a/app/src/main/res/layout-v17/activity_sign_in.xml
+++ b/app/src/main/res/layout-v17/activity_sign_in.xml
@@ -76,7 +76,7 @@
         android:id="@+id/email"
         android:layout_width="230dp"
         android:layout_height="40dp"
-        android:paddingLeft="10dp"
+        android:paddingStart="10dp"
         android:layout_marginTop="20dp"
         android:hint="@string/email_id"
         android:inputType="textEmailAddress"
@@ -106,7 +106,7 @@
         android:layout_height="40dp"
         android:text="@string/login"
         android:textColor="#FFFFFF"
-        android:textSize="20sp"
+        android:textSize="20dp"
         android:textStyle="bold"
         android:textAllCaps="false"
         android:background="#F9851D"
@@ -114,7 +114,6 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="20dp"
         android:drawableRight="@drawable/arrow_sign_in"
-        android:drawableEnd="@drawable/arrow_sign_in"
         android:paddingRight="60dp"
         android:paddingLeft="60dp"/>
 
