--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,14 +6,23 @@
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
     android:background="#2a9288">
 
+    <ImageView
+        android:id="@+id/splash_img"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/logo"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="150dp"/>
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Vedor Crew"
+        android:text="@string/logo"
         android:textColor="#FFFFFF"
-        android:textSize="60dp"
-        android:textStyle="bold"
-        android:layout_marginTop="100dp"
-        android:layout_centerHorizontal="true"/>
+        android:layout_below="@+id/splash_img"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="20dp"/>
+
+
 
 </RelativeLayout>
