--- a/app/src/main/res/layout/grid_single.xml
+++ b/app/src/main/res/layout/grid_single.xml
@@ -2,8 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/stroke">
-
+    android:background="@drawable/dropshadow">
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -20,5 +19,4 @@
         android:id="@+id/grid_text"
         android:paddingTop="5dp"
         android:layout_gravity="center_horizontal"/>
-
 </LinearLayout>
