--- a/app/src/main/res/layout/activity_add_vendor_category.xml
+++ b/app/src/main/res/layout/activity_add_vendor_category.xml
@@ -33,19 +33,27 @@
         android:layout_toLeftOf="@+id/category_id"
         android:layout_toStartOf="@+id/category_id" />
 
+         <GridView
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            android:id="@+id/gridview"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_below="@+id/category_id"
+            android:layout_centerHorizontal="true"
+            android:gravity="center"
+            android:scrollbars="none"
+            android:horizontalSpacing="15dp"
+            android:numColumns="3"
+            android:layout_marginTop="30dp"
+            android:verticalSpacing="15dp"/>
 
-    <GridView
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/gridview"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center"
-        android:scrollbars="none"
-        android:horizontalSpacing="15dp"
-        android:numColumns="3"
-        android:layout_marginTop="30dp"
-        android:verticalSpacing="15dp"
-        android:layout_below="@+id/category_id"
-        android:layout_centerHorizontal="true" />
+        <com.getbase.floatingactionbutton.FloatingActionButton
+            android:id="@+id/setter"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBottom="@+id/gridview"
+            android:layout_alignRight="@+id/gridview"
+            android:layout_alignEnd="@+id/gridview"
+            android:layout_marginBottom="16dp"/>
 
-</RelativeLayout>
+  </RelativeLayout>
