Integrated Login and Registration api

--- a/app/src/main/res/layout-v17/activity_sign_in.xml
+++ b/app/src/main/res/layout-v17/activity_sign_in.xml
@@ -40,8 +40,8 @@
         android:textColor="#FFFFFF"
         android:textSize="20sp"
         android:textStyle="bold"
-        android:drawableRight="@drawable/arrow_sign_in"
-        android:drawableEnd="@drawable/arrow_sign_in"
+        android:drawableRight="@drawable/arrow_sign_up"
+        android:drawableEnd="@drawable/arrow_sign_up"
         android:paddingRight="60dp"
         android:paddingLeft="60dp"
         android:background="#4bada5"
