--- a/app/src/main/res/layout/activity_add_vendor_category.xml
+++ b/app/src/main/res/layout/activity_add_vendor_category.xml
@@ -1,5 +1,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#FFFFFF"
     android:paddingLeft="@dimen/activity_horizontal_margin"
@@ -33,7 +35,7 @@
         android:layout_toLeftOf="@+id/category_id"
         android:layout_toStartOf="@+id/category_id" />
 
-         <GridView
+         <uk.co.androidalliance.edgeeffectoverride.GridView
             xmlns:android="http://schemas.android.com/apk/res/android"
             android:id="@+id/gridview"
             android:layout_width="match_parent"
@@ -42,6 +44,8 @@
             android:layout_centerHorizontal="true"
             android:gravity="center"
             android:scrollbars="none"
+            app:edgeeffect_color="#2a9288"
+            android:clipToPadding="false"
             android:horizontalSpacing="15dp"
             android:numColumns="3"
             android:layout_marginTop="30dp"
