--- a/app/src/main/res/layout/grid_single.xml
+++ b/app/src/main/res/layout/grid_single.xml
@@ -4,8 +4,8 @@
     android:layout_height="match_parent"
     android:background="@drawable/dropshadow">
     <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
         android:id="@+id/grid_image"
         android:scaleType="center"
         android:layout_gravity="center_horizontal" />
