--- a/app/src/main/res/drawable/login_screen_signup.xml
+++ b/app/src/main/res/drawable/login_screen_signup.xml
@@ -2,5 +2,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <corners android:radius="3.5dp"/>
-    <solid android:color="@color/submit_button_color"/>
+    <solid android:color="@color/sign_up_btn_color"/>
 </shape>
