--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,21 +8,22 @@
 
     <ImageView
         android:id="@+id/splash_img"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="300dp"
+        android:layout_height="300dp"
+        android:layout_marginTop="70dp"
         android:src="@drawable/logo"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="150dp"/>
+        android:layout_centerHorizontal="true"/>
 
     <TextView
-        android:layout_width="wrap_content"
+        android:id="@+id/text"
+        android:layout_width="280dp"
         android:layout_height="wrap_content"
         android:text="@string/logo"
         android:textColor="#FFFFFF"
-        android:textSize="12sp"
-        android:layout_below="@+id/splash_img"
+        android:gravity="center"
+        android:textSize="18sp"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="20dp"/>
+        android:layout_marginTop="290dp"/>
 
 
 
