--- a/app/src/main/res/layout/activity_validate_user.xml
+++ b/app/src/main/res/layout/activity_validate_user.xml
@@ -7,7 +7,7 @@
     <LinearLayout
         android:id="@+id/linearLayout"
         android:layout_width="match_parent"
-        android:layout_height="164dp"
+        android:layout_height="wrap_content"
         android:background="#4CAEA6"
         android:gravity="center"
         android:paddingTop="20dp"
