--- a/app/src/main/res/drawable/dropshadow.xml
+++ b/app/src/main/res/drawable/dropshadow.xml
@@ -4,35 +4,35 @@
     <!-- Drop Shadow Stack -->
     <item>
         <shape>
-            <padding android:top="1dp" android:right="1dp" android:bottom="1dp" android:left="1dp" />
+            <padding android:top="1dp" android:right="1dp"/>
             <solid android:color="#00CCCCCC" />
             <corners android:radius="5dp" />
         </shape>
     </item>
     <item>
         <shape>
-            <padding android:top="1dp" android:right="1dp" android:bottom="1dp" android:left="1dp" />
+            <padding android:top="1dp" android:right="1dp"  />
             <solid android:color="#10CCCCCC" />
             <corners android:radius="5dp" />
         </shape>
     </item>
     <item>
         <shape>
-            <padding android:top="1dp" android:right="1dp" android:bottom="1dp" android:left="1dp" />
+            <padding android:top="1dp" android:right="1dp"  android:bottom="1dp" android:left="1dp" />
             <solid android:color="#20CCCCCC" />
             <corners android:radius="5dp" />
         </shape>
     </item>
     <item>
         <shape>
-            <padding android:top="1dp" android:right="1dp" android:bottom="1dp" android:left="1dp" />
+            <padding android:top="1dp" android:right="1dp" />
             <solid android:color="#30CCCCCC" />
             <corners android:radius="5dp" />
         </shape>
     </item>
     <item>
         <shape>
-            <padding android:top="1dp" android:right="1dp" android:bottom="1dp" android:left="1dp" />
+            <padding android:top="1dp" android:right="1dp" />
             <solid android:color="#50CCCCCC" />
             <corners android:radius="5dp" />
         </shape>
@@ -43,7 +43,7 @@
         <shape>
             <solid android:color="#FFFFFF" />
             <corners android:radius="5dp" />
-            <padding android:bottom="5dp" android:top="5dp" android:right="10dp" android:left="10dp"/>
+            <padding android:top="10dp" android:right="10dp" android:left="10dp" android:bottom="10dp" />
         </shape>
     </item>
 </layer-list>
