--- a/app/src/main/res/layout/custom_actionbar.xml
+++ b/app/src/main/res/layout/custom_actionbar.xml
@@ -7,6 +7,7 @@
         android:id="@+id/imageView"
         android:paddingBottom="10dp"
         android:contentDescription=""
+        android:src="@drawable/logo"
         android:layout_marginTop="7dp"
         android:layout_marginRight="35dp"
         android:layout_marginEnd="35dp"
