--- a/app/src/main/res/layout/grid_single.xml
+++ b/app/src/main/res/layout/grid_single.xml
@@ -8,15 +8,17 @@
         android:layout_height="40dp"
         android:id="@+id/grid_image"
         android:scaleType="center"
-        android:layout_gravity="center_horizontal" />
+        android:layout_gravity="center_vertical|center_horizontal" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="New Text"
         android:textColor="#242424"
+        android:lines="2"
         android:textSize="12sp"
         android:id="@+id/grid_text"
         android:paddingTop="5dp"
-        android:layout_gravity="center_horizontal"/>
+        android:gravity="center"
+        android:layout_gravity="center_vertical|center_horizontal"/>
 </LinearLayout>
