--- a/app/src/main/res/menu/menu_add_vendor_category.xml
+++ b/app/src/main/res/menu/menu_add_vendor_category.xml
@@ -4,15 +4,11 @@
     tools:context="com.acc.vendorcrew.activities.AddVendorCategoryActivity">
 
 
-    <item android:id="@+id/action_add"
-        android:icon="@drawable/icon_add"
-        android:title="Add"
-        app:showAsAction="never"/>
-
     <item android:id="@+id/action_search"
           android:icon="@drawable/search"
           android:title="Search"
-          android:showAsAction="always"/>
+          android:showAsAction="collapseActionView|ifRoom"
+          android:actionViewClass="android.widget.SearchView"/>
 
     <item android:id="@+id/action_settings" android:title="@string/action_settings"
         android:orderInCategory="100" app:showAsAction="never" />
