--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -308,6 +308,7 @@
         android:layout_centerHorizontal="true"
         android:layout_below="@+id/disclaimer_text2"
         android:layout_marginTop="25dp"
+        android:layout_marginBottom="25dp"
         android:clickable="true"/>
 
 </RelativeLayout>
