--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,6 +18,8 @@
     <color name="button_text_color">#FFFFFF</color>
 
 
-    <color name="orange">#FF9900</color>
-    <color name="orange_pressed">#FF9900</color>
+    <color name="orange">#FF4e0c</color>
+    <color name="orange_pressed">#FF4e0c</color>
+
+    <color name="white">#FFFFFF</color>
 </resources>
