--- a/app/src/main/res/layout/activity_add_vendor_category.xml
+++ b/app/src/main/res/layout/activity_add_vendor_category.xml
@@ -19,14 +19,12 @@
         android:textSize="13.5sp"
         android:textColor="#242424"
         android:layout_gravity="center"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginRight="79dp"
-        android:layout_marginEnd="79dp" />
+        android:layout_alignBottom="@+id/imageView2"
+        android:layout_toLeftOf="@+id/setter"
+        android:layout_toStartOf="@+id/setter" />
 
     <ImageView
-        android:layout_width="32dp"
+        android:layout_width="24dp"
         android:layout_height="24dp"
         android:id="@+id/imageView2"
         android:layout_marginRight="5dp"
@@ -48,7 +46,7 @@
             android:clipToPadding="false"
             android:horizontalSpacing="15dp"
             android:numColumns="3"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="16dp"
             android:verticalSpacing="15dp"
             android:listSelector="#f2f2f2"/>
 
