--- a/app/src/main/res/layout/custom_actionbar.xml
+++ b/app/src/main/res/layout/custom_actionbar.xml
@@ -8,10 +8,6 @@
         android:paddingBottom="10dp"
         android:contentDescription=""
         android:src="@drawable/logo"
-        android:layout_marginTop="7dp"
-        android:layout_marginRight="35dp"
-        android:layout_marginEnd="35dp"
         android:layout_alignParentTop="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_centerHorizontal="true" />
 </RelativeLayout>
