--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -1,14 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:scrollbars="none">
-<RelativeLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
-
+<RelativeLayout
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent">
     <LinearLayout
         android:id="@+id/linearLayout"
         android:layout_width="match_parent"
@@ -162,12 +160,12 @@
 
     <EditText
         android:id="@+id/city"
-        android:layout_width="280dp"
+        android:layout_width="120dp"
         android:layout_height="40dp"
         android:textColor="@color/text_color"
         android:layout_below="@+id/mob_no"
         android:paddingBottom="0dp"
-        android:layout_centerHorizontal="true"
+        android:layout_alignRight="@id/mob_no"
         android:background="@drawable/appcompat_edit_text_holo_light"
         android:layout_marginTop="10dp"
         android:hint="@string/city"
@@ -190,15 +188,16 @@
 
     <EditText
         android:id="@+id/state"
-        android:layout_width="280dp"
+        android:layout_width="80dp"
         android:layout_height="40dp"
         android:textColor="@color/text_color"
-        android:layout_below="@+id/city"
+        android:layout_below="@+id/mob_no"
         android:paddingBottom="0dp"
-        android:layout_centerHorizontal="true"
+        android:layout_alignLeft="@+id/mob_no"
         android:background="@drawable/appcompat_edit_text_holo_light"
         android:layout_marginTop="10dp"
         android:hint="@string/state"
+        android:maxLength="3"
         android:gravity="center"
         android:inputType="text" />
 
@@ -218,12 +217,12 @@
 
     <EditText
         android:id="@+id/country"
-        android:layout_width="280dp"
+        android:layout_width="60dp"
         android:layout_height="40dp"
         android:textColor="@color/text_color"
-        android:layout_below="@+id/state"
+        android:layout_below="@+id/country_code"
+        android:layout_alignRight="@+id/country_code"
         android:paddingBottom="0dp"
-        android:layout_centerHorizontal="true"
         android:background="@drawable/appcompat_edit_text_holo_light"
         android:layout_marginTop="10dp"
         android:hint="@string/country"
@@ -308,8 +307,9 @@
         android:layout_centerHorizontal="true"
         android:layout_below="@+id/disclaimer_text2"
         android:layout_marginTop="25dp"
-        android:layout_marginBottom="25dp"
+        android:layout_marginBottom="10dp"
         android:clickable="true"/>
 
 </RelativeLayout>
-</ScrollView>
+
+    </ScrollView>
